--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="ui container fluid">
-  <div class="ui vertical left visible very thin sidebar menu">
+<div class="ui container fluid" id="app">
+  <div class="ui vertical left very thin sidebar menu visible">
     <a class="item">
       <i class="home icon"></i>      
     </a>   
