--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -1,5 +1,12 @@
 <div>
   <div class="ui form">
-    
+    <div class="field inline">
+      <label>Mã SP</label>
+      <input type="text" />
+    </div>
+    <div class="field inline">
+      <label>Tên SP</label>
+      <input type="text" />
+    </div>
   </div>
 </div>
