--- a/src/app/widgets/grid/grid.component.scss
+++ b/src/app/widgets/grid/grid.component.scss
@@ -1,3 +1,9 @@
-.table {
+.mat-table {
   cursor: pointer;
+  width: 100%;
+
+  .mat-row:hover {
+    background-color: #F1F1F1 !important;
+    transition: background 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);    
+  }
 }
