--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -1,6 +1,34 @@
 <div>
-  <grid [columns]="columns" [dataSource]="products" (rowClick)="onRowClick()"></grid>
+  <mat-expansion-panel hideToggle>
+    <mat-expansion-panel-header>
+      <mat-panel-title>Tìm kiếm</mat-panel-title>
+      <mat-panel-description>
+        <mat-icon>filter_list</mat-icon>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <div class="ui grid">
+      <div class="four wide column">
+        <mat-form-field>
+          <input matInput placeholder="Mã SP" [(ngModel)]="search.productNo">
+        </mat-form-field>
+      </div>
+      <div class="four wide column">
+        <mat-form-field>
+          <input matInput placeholder="Tên SP" [(ngModel)]="search.productName">
+        </mat-form-field>
+      </div>
+      <!--<div class="four wide column">
+        <dropdown [options]="categories" [label]="'Loại'" [displayMember]="name" [valueMember]="id" [(model)]="search.categoryId"></dropdown>
+      </div>-->
+    </div>
+    <mat-action-row>      
+      <button mat-button color="primary" (click)="search()">Tìm</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+  <div style="margin-top: 8px"></div>
+  <grid [columns]="columns" [dataSource]="products" (rowClick)="onRowClick($event)"></grid>
   <flyout>
-    <product></product>      
+    <product [id]="selectedProduct.id"></product>
   </flyout>
 </div>
