--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -1,5 +1,5 @@
-.mat-expansion-panel {  
-  .mat-expansion-panel-header-description {
-    justify-content: flex-end;
+.product-list {
+  .dropdown-container {
+    margin-top: -10px;
   }
 }
