--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,50 +13,27 @@
   padding: 8px !important;
 }
 
-.dropdown-container {
-  .ui.dropdown {
-    width: 100% !important;
-    border: none !important;
-    border-radius: 0px !important;
-    padding: 0px !important;
-    min-height: 25px !important;
+.toolbar-container {
+  .mat-toolbar {
+    margin-top: -8px;
+    margin-left: -8px;
+    height: 48px !important;
+    width: calc(100% + 16px) !important;
+    margin-bottom: 8px;
+    background-color: #c69999;
+    justify-content: flex-end;
 
-    &:hover, &.active {
-      border: none !important;
-      box-shadow: none !important;
-    }
-
-    select {
-      -webkit-appearance: none;
-    }
-
-    .menu {
-      margin-top: 6px !important;
-    }
-
-    .dropdown.icon {
-      top: 8px !important;
-      right: 5px !important;
-    }
-
-    input.search {
-      padding-left: 0px !important;
-    }
-
-    .text {
-      top: 10px !important;
+    .mat-button {
+      min-width: 48px;
+      padding: 0 8px;
     }
   }
 
-  .mat-form-field-label {
-    top: 25px !important;
-  }
-
-  .mat-form-field-type-mat-native-select .mat-form-field-infix::after {
-    content: none;
-  }
-
-  .mat-form-field-underline.highlight {
-    border-bottom: 2px solid grey;
+  .mat-expansion-panel {
+    margin-top: -6px;
+    margin-left: -8px;
+    margin-right: -8px;
+    background-color: whitesmoke;
   }
 }
+
