--- a/src/app/widgets/flyout/flyout.component.html
+++ b/src/app/widgets/flyout/flyout.component.html
@@ -1,17 +1,15 @@
-<div class="flyout">
-  <div class="ui vertical sidebar menu"       
-       [class.top]="direction == 'top'"
-       [class.right]="direction == 'right'"
-       [class.bottom]="direction == 'bottom'"
-       [class.left]="direction == 'left'"
-       [class.very]="size == 'very thin' || size == 'very wide'"
-       [class.thin]="size == 'thin' || size =='very thin'"
-       [class.wide]="size == 'wide' || size == 'very wide'">
-    <div class="content">
-      <ng-content select="content"></ng-content>
-    </div>
-    <div class="actions">
-      <ng-content select="actions"></ng-content>
-    </div>    
+<div class="ui vertical sidebar menu flyout"
+     [class.top]="direction == 'top'"
+     [class.right]="direction == 'right'"
+     [class.bottom]="direction == 'bottom'"
+     [class.left]="direction == 'left'"
+     [class.very]="size == 'very thin' || size == 'very wide'"
+     [class.thin]="size == 'thin' || size =='very thin'"
+     [class.wide]="size == 'wide' || size == 'very wide'">
+  <div class="content">
+    <ng-content select="content"></ng-content>
+  </div>
+  <div class="actions">
+    <ng-content select="actions"></ng-content>
   </div>
 </div>
