--- a/src/app/widgets/dropdown/dropdown.component.scss
+++ b/src/app/widgets/dropdown/dropdown.component.scss
@@ -1,4 +1,6 @@
 .dropdown-container {
+  margin-top: -10px;
+
   .ui.dropdown {
     width: 100% !important;
     border: none !important;
@@ -18,6 +20,12 @@
 
     .menu {
       margin-top: 6px !important;
+
+      .item {
+        min-height: 40px;
+        font-size: 13px;
+        padding: 12px;
+      }
     }
 
     .dropdown.icon {
@@ -30,7 +38,7 @@
     }
 
     .text {
-      top: 10px !important;
+      top: 10px !important;      
     }
   }
 
