--- a/src/app/widgets/typeahead/typeahead.component.html
+++ b/src/app/widgets/typeahead/typeahead.component.html
@@ -5,7 +5,9 @@
           [displayMember]="displayMember"
           [label]="label"
           [floatLabel]="floatLabel"
-          [direction]="direction">  
+          [direction]="direction"
+          (keyup)="onKeyup($event)"
+          [showOnFocus]="false">  
   <items>
     <div #items><ng-content select="items"></ng-content></div>
     <div *ngIf="items.children.length == 0">
