--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,14 @@
 .container {
   height: 100%;
+
   .sidebar {
     background-color: whitesmoke;
   }
 
   .content {
-    padding: 8px;
-    padding-right: 68px;    
+    height: 100%;
+    padding: 0px;
+    padding-right: 60px;
   }
 
   .sidebar {
