--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -2,11 +2,18 @@
   <table mat-table [dataSource]="bindingDataSource" class="mat-elevation-z1">
     <ng-container *ngFor="let column of columns" [matColumnDef]="column.field">
       <th mat-header-cell *matHeaderCellDef [style.width]="column.width || 'auto'"> {{column.caption}} </th>
-      <td mat-cell *matCellDef="let row"> {{column.format(getCellData(row, column))}} </td>
+      <td mat-cell *matCellDef="let row">        
+        <ng-template [ngIf]="isNumber(row, column)" [ngIfElse]="elseBlock">
+          {{column.format(getCellData(row, column)) | number}}
+        </ng-template>        
+        <ng-template #elseBlock>
+          {{column.format(getCellData(row, column))}}
+        </ng-template>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row)" [class.highlighted]="selectedIndex == i"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row, i)" [class.highlighted]="selectedIndex == i"></tr>
   </table>
 </div>
 
