--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,10 +14,9 @@
 }
 
 .toolbar-container {
-  .mat-toolbar {
-    margin-top: -8px;
+  .mat-toolbar {    
     margin-left: -8px;
-    height: 48px !important;
+    height: 40px !important;
     width: calc(100% + 16px) !important;
     margin-bottom: 8px;
     background-color: #c69999;
@@ -39,5 +38,11 @@
 
 .red {
   color: red;
+}
+
+.mat-fab {
+  position: absolute !important;
+  bottom: 8px !important;
+  right: 8px !important;
 }
 
